# Fattiakhetdinov-Silvestr-Labs

./: lab5.docx  variant.json  variant.txt
Lab0.1/: complex.cpp  complex.h  lab1.docx  main.cpp  test_01.txt  test_02.txt
Lab0.2/: CMakeLists.txt  complex.cpp  complex.h  lab2.docx  main.cpp  test_01.txt  test_02.txt
Lab1/: figure.h  hexagon.cc  hexagon.cpp  hexagon.h  lab3.docx  main.cc  main.cpp  pentagon.cc  pentagon.cpp  pentagon.h  point.cc  point.cpp  point.h  report.docx  rhombus.cc  rhombus.cpp  rhombus.h  variant.txt
Lab2/: figure.h  lab4.docx  main.cpp  rhombus.h  tnary_tree.cpp  tnary_tree.h  tnary_tree_item.cpp  tnary_tree_item.h
Lab3/: lab5.docx  main.cpp  point.cpp  point.h  rhombus.cpp  tnary_tree.cpp  tnary_tree.h  tnary_tree_item.cpp  tnary_tree_item.h
Lab4/: Makefile  lab6.docx  main.cpp  rhombus.h  tnary_tree.cpp  tnary_tree.h  tnary_tree_item.cpp  tnary_tree_item.h
Lab5/: lab7.docx  point.cpp  point.h  rhombus.cpp  titerator.h
Lab6/: HListItem.cpp  HListItem.h  TAllocatorBlock.h  TLinkedList.cpp  TLinkedList.h  figure.h  lab8.docx  main.cpp  titerator.h  tnary_tree.cpp  tnary_tree.h
